argocd-conf/base/argocd-ingress-grpc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
      host: grpc-argocd.DOMAIN.com
  tls:
    - hosts:
        - grpc-argocd.DOMAIN.com
      secretName: argocd-secret # do not change, this is provided by Argo CD
