argocd-conf/base/argocd-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
      host: argocd.DOMAIN.com
  tls:
    - hosts:
        - argocd.DOMAIN.com
      secretName: argocd-secret # do not change, this is provided by Argo CD
